权限控制侧边栏

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -130,3 +130,23 @@ textarea {
 i, em {
     font-style: normal;
 }
+/* 浮动 */
+.fl{
+    float: left;
+}
+
+.fr{
+    float: right;
+}
+/*清楚浮动*/
+.clearfix:after {
+    content:"";
+    height:0;
+    line-height: 0;
+    display: block;
+    visibility: hidden;
+    clear: both;
+}
+.clearfix {
+    zoom: 1; /*å…¼å®¹IEä½Žç‰ˆæœ¬*/
+}
